--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Untitled</title>
     <meta name="description" content="This is an example of a meta description.">
     <link rel="stylesheet" type="text/css" href="theme.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 
 <body>
     <h3>Natty Site!</h3>
+    <p>Boyan is awesome</p>
 </body>
 
 </html>
