add drivers license

--- a/index.html
+++ b/index.html
@@ -298,6 +298,10 @@ href="#awards">Ин -->
                         <span class="fa-li"><i class="fas fa-check"></i></span>
                         SketchUp
                     </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        Шофьорска книжка - категотия B
+                    </li>
                 </ul>
             </div>
         </section>
