fix english words

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ href="#awards">Ин -->
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">градоустройствен план на Микрорайон</h5>
-                                    <p class="card-text">Open image for more screenshots.</p>
+                                    <p class="card-text">Повече детайли след като натиснете снимката</p>
                                 </div>
                             </div>
                         </div>
@@ -135,7 +135,7 @@ href="#awards">Ин -->
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Разпределение на къща</h5>
-                                    <p class="card-text">Open image for more screenshots.</p>
+                                    <p class="card-text">Повече детайли след като натиснете снимката</p>
                                 </div>
                             </div>
                         </div>
@@ -151,7 +151,7 @@ href="#awards">Ин -->
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Озеленяване на вилен парцел</h5>
-                                    <p class="card-text">Open image for more screenshots.</p>
+                                    <p class="card-text">Повече детайли след като натиснете снимката</p>
                                 </div>
                             </div>
                         </div>
@@ -201,7 +201,7 @@ href="#awards">Ин -->
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">вертикално планране / трасировъчен</h5>
-                                    <p class="card-text">Open image for more screenshots.</p>
+                                    <p class="card-text">Повече детайли след като натиснете снимката</p>
                                 </div>
                             </div>
                         </div>
@@ -218,7 +218,7 @@ href="#awards">Ин -->
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Дендрологичен / детайли</h5>
-                                    <p class="card-text">Open image for more screenshots.</p>
+                                    <p class="card-text">Повече детайли след като натиснете снимката</p>
                                 </div>
                             </div>
                         </div>
@@ -234,7 +234,7 @@ href="#awards">Ин -->
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Фонтанка</h5>
-                                    <p class="card-text">Open image for more screenshots.</p>
+                                    <p class="card-text">Повече детайли след като натиснете снимката</p>
                                 </div>
                             </div>
                         </div>
@@ -269,7 +269,7 @@ href="#awards">Ин -->
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Рекреационен Център</h5>
-                                    <p class="card-text">Open image for more screenshots.</p>
+                                    <p class="card-text">Повече детайли след като натиснете снимката</p>
                                 </div>
                             </div>
                         </div>
