added 3 new projecs updated some old ones

--- a/index.html
+++ b/index.html
@@ -37,12 +37,6 @@
             </ul>
         </div>
     </nav>
-    <!-- href="#about">За 
-href="#experience
-href="#education"
-href="#skills">Ум
-href="#interests"
-href="#awards">Ин -->
     <div class="container-fluid p-0">
         <!-- About-->
         <section class="resume-section" id="about">
@@ -51,7 +45,7 @@ href="#awards">Ин -->
                     Натали
                     <span class="text-primary">Владимирова</span>
                 </h2>
-                <div class="subheading mb-5">
+                <div class="subheading mb-3">
                     <div class="row">
                         <div class="col-sm">
                             <i class="fas fa-thumbtack fa-sm"></i> <span class="info-font"> &nbsp; &nbsp; ул. Димчо
@@ -72,42 +66,90 @@ href="#awards">Ин -->
                     </div>
 
                 </div>
-                <p class="lead mb-5">Бъдещ ландшафтен архитект
+                <p class="lead mb-1">Ландшафтен архитект
                 </p>
             </div>
         </section>
         <hr class="m-0" />
         <!-- Experience-->
-
-        <hr class="m-0" />
         <!-- Education-->
         <section class="resume-section" id="education">
             <div class="resume-section-content">
                 <h3 class="mb-5">Образование</h3>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">СГСАГ "Христо Ботев" </h4>
                         <div class="subheading mb-3">Парково строителство</div>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">09/2012 - 2016</span></div>
                 </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between">
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">Лесотехнически университет</h4>
                         <div class="subheading mb-3">Ландшафтна архитектура - магистърска степен</div>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">09/2016 - 2021</span></div>
                 </div>
+
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
+                    <div class="flex-grow-1">
+                        <h4 class="mb-0">Софтуни</h4>
+                        <div class="subheading mb-3">Programing basics - Python</div>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">09/2021 - 10/2021</span></div>
+                </div>
+
             </div>
         </section>
         <hr class="m-0" />
         <section class="resume-section" id="awards">
             <div class="resume-section-content">
                 <h3 class="mb-5">Моите проекти</h3>
-
+                <h5><a href="https://drive.google.com/drive/folders/1MIZgvIogiY6bjOFV3tKhCBJk6XdmPwBV">Линк към всички файлове</a></h5>
                 <div class="container">
-                    <div class="row">
 
+                    <div class="row buffer">
+                        <div class="col-sm">
+                            <div class="card" style="width: 18rem;">
+                                <div class="gallery">
+                                    <img class="card-img-top" src="./assets/img/projectImg/3D_SketchUp_NataliV_page-0001.jpg">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Дипломна работа/Визуализации</h5>
+                                    <p class="card-text">Изкуствено декоративно езеро с наблюдателна кула</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-sm">
+                            <div class="card" style="width: 18rem;">
+                                <div class="gallery">
+                                    <img class="card-img-top" src="./assets/img/projectImg/Dendrology_NataliV-page-001.jpg">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Дипломна работа/Дендтрологичен чертеж</h5>
+                                    <p class="card-text">Обхват на разработка Паркоустрояване на бивше летище в гр.Божурище</p>
+                                    <span><a href="./assets/img/projectImg/Dendrology_NataliV-page-001.jpg" target="_blank">Отвори в пълен размер <i class="fas fa-external-link-alt"></i></a></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-sm">
+                            <div class="card" style="width: 18rem;">
+                                <div class="gallery">
+                                    <img class="card-img-top" src="./assets/img/projectImg/ТАБЛО 5.jpg">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Дипломна работа/Фрагмент</h5>
+                                    <p class="card-text">Моноградина-Божурариум</p>
+                                    <span><a href="./assets/img/projectImg/ТАБЛО 5.jpg" target="_blank">Отвори в пълен размер <i class="fas fa-external-link-alt"></i></a></span>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row top-buffer">
                         <div class="col-sm">
                             <div class="card" style="width: 18rem;">
                                 <div class="gallery">
@@ -164,6 +206,7 @@ href="#awards">Ин -->
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Паркоустрояване на булевард</h5>
+                                    <span><a href="./assets/img/projectImg/bulevard.jpg" target="_blank">Отвори в пълен размер <i class="fas fa-external-link-alt"></i></a></span>
                                 </div>
                             </div>
                         </div>
@@ -185,6 +228,7 @@ href="#awards">Ин -->
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Село устройствен план</h5>
+                                    <span><a href="./assets/img/projectImg/SeloMladenovo.jpg" target="_blank">Отвори в пълен размер <i class="fas fa-external-link-alt"></i></a></span>
                                 </div>
                             </div>
                         </div>
@@ -247,6 +291,7 @@ href="#awards">Ин -->
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Хотел към лесопарк</h5>
+                                    <span><a href="./assets/img/projectImg/hotelLesopark.jpg" target="_blank">Отвори в пълен размер <i class="fas fa-external-link-alt"></i></a></span>
                                 </div>
                             </div>
                         </div>
@@ -257,6 +302,7 @@ href="#awards">Ин -->
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Устройствен план на Къмпинг</h5>
+                                    <span><a href="./assets/img/projectImg/kumping.jpg" target="_blank">Отвори в пълен размер <i class="fas fa-external-link-alt"></i></a></span>
                                 </div>
                             </div>
                         </div>
@@ -275,15 +321,13 @@ href="#awards">Ин -->
                         </div>
                     </div>
                 </div>
-
             </div>
-
         </section>
         <hr class="m-0" />
 
         <!-- Skills-->
         <section class="resume-section" id="skills">
-            <div class="resume-section-content">
+            <div class="row resume-section-content">
                 <h3 class="mb-5">Умения</h3>
                 <ul class="fa-ul mb-0">
                     <li>
@@ -328,6 +372,16 @@ href="#awards">Ин -->
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">06/2019 - 09/2019</span></div>
                 </div>
+
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h4 class="mb-0">Общинска администрация</h4>
+                        <div class="subheading mb-3">Община Костинброд</div>
+                        <p>Проекти обвързани с кадастър и регулация на поземлени имоти</p>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">06/2019 - 09/2019</span></div>
+                </div>
+
             </div>
         </section>
         <hr class="m-0" />
